[package]
name = "rum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dirs = "5.0.1"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
procfs = "0.15.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
